apps/70-tools/nexterm/overlays/prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexterm
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    vixens.io/nossoneeded: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Tools
    gethomepage.dev/name: Nexterm
    gethomepage.dev/icon: nexterm.svg
    gethomepage.dev/description: Web terminal (SSH, RDP, VNC)
spec:
  ingressClassName: traefik
  rules:
    - host: nexterm.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexterm
                port:
                  number: 80
  tls:
    - hosts:
        - nexterm.truxonline.com
      secretName: nexterm-tls
